--- a/index.html
+++ b/index.html
@@ -3,35 +3,39 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>Creating a Store Locator on Google Maps</title>
-  <style>
-    #map {
-      height: 100%;
-    }
-    html, body {
-      height: 80%;
-      width: 80%;
-      margin: 0;
-      padding: 0;
-    }
- </style>
+    <title>Careers of Ole Miss CS Students</title>
+    <style>
+      #map {
+        height: 100%;
+      }
+      html, body {
+        height: 80%;
+        width: 80%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body style="margin:0px; padding:0px;" onload="initMap()">
     <div>
-         <label for="raddressInput">Search location:</label>
-         <input type="text" id="addressInput" size="15"/>
+      <label for="raddressInput">Search location:</label>
+        <input type="text" id="addressInput" size="15"/>
         <label for="radiusSelect">Radius:</label>
         <select id="radiusSelect" label="Radius">
-          <option value="50">50 mi</option>
-          <option value="30">30 mi</option>
-          <option value="20">20 mi</option>
+          <option value="1000">1000 mi</option>
+          <option value="100">100 mi</option>
+          <option value="25">25 mi</option>
           <option value="10" selected>10 mi</option>
         </select>
 
-        <input type="button" id="searchButton" value="Search"/>
+      <input type="button" id="searchButton" value="Search"/>
     </div>
-    <div><select id="locationSelect" style="width: 10%; visibility: hidden"></select></div>
-    <div id="map" style="width: 100%; height: 90%"></div>
+    <div>
+      <select id="locationSelect" style="width: 10%; visibility: hidden">
+      </select>
+    </div>
+    <div id="map" style="width: 100%; height: 90%">
+    </div>
     <script>
       var map;
       var markers = [];
@@ -39,10 +43,10 @@
       var locationSelect;
 
         function initMap() {
-          var oxford = {lat: 34.368099, lng:-89.525360};
+          var oxford = {lat: 39.8283, lng: -98.5795};
           map = new google.maps.Map(document.getElementById('map'), {
             center: oxford,
-            zoom: 11,
+            zoom: 4,
             mapTypeId: 'roadmap',
             mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU}
           });
@@ -165,11 +169,14 @@
        function doNothing() {}
   </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVansFU4zqmOoFlCghdgCc0MIFgxFCe1k&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjRxIad1m3RzTAn01DyqZKC1CVbQ_nLuw&callback=initMap">
     </script>
 
     <form action="add.php">
       <input type="submit" value="Add a Marker">
+    </form><br>
+    <form action="remove.php">
+      <input type="submit" value="Remove a Marker">
     </form>
   </body>
 </html>
