--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </style>
   </head>
   <body style="margin:0px; padding:0px;" onload="initMap()">
+    <link rel="stylesheet" href="add.css">
+
     <div>
       <label for="raddressInput">Search location:</label>
         <input type="text" id="addressInput" size="15"/>
@@ -30,10 +32,6 @@
 
       <input type="button" id="searchButton" value="Search"/>
     </div>
-    <div>
-      <select id="locationSelect" style="width: 10%; visibility: hidden">
-      </select>
-    </div>
     <div id="map" style="width: 100%; height: 90%">
     </div>
     <script>
@@ -44,7 +42,8 @@
 
         function initMap() {
           var oxford = {lat: 39.8283, lng: -98.5795};
-          map = new google.maps.Map(document.getElementById('map'), {
+          var mapElement = document.getElementById('map');
+          map = new google.maps.Map(mapElement, {
             center: oxford,
             zoom: 4,
             mapTypeId: 'roadmap',
@@ -52,15 +51,40 @@
           });
           infoWindow = new google.maps.InfoWindow();
 
+          //
+          var searchUrl = 'pointlocator.php?lat=0&lng=0&radius=10000';
+          downloadUrl(searchUrl, function(data) {
+            var xml = parseXml(data);
+            var markerNodes = xml.documentElement.getElementsByTagName("marker");
+            var bounds = new google.maps.LatLngBounds();
+            for (var i = 0; i < markerNodes.length; i++) {
+              var id = markerNodes[i].getAttribute("id");
+              var name = markerNodes[i].getAttribute("name");
+              var address = markerNodes[i].getAttribute("address");
+              var distance = parseFloat(markerNodes[i].getAttribute("distance"));
+              var latlng = new google.maps.LatLng(
+                   parseFloat(markerNodes[i].getAttribute("latitude")),
+                   parseFloat(markerNodes[i].getAttribute("longitude")));
+
+              //createOption(name, distance, i);
+              createMarker(latlng, name, address);
+              bounds.extend(latlng);
+            }
+            //map.fitBounds(bounds);
+            locationSelect.style.visibility = "visible";
+            /*locationSelect.onchange = function() {
+              var markerNum = locationSelect.options[locationSelect.selectedIndex].value;
+              google.maps.event.trigger(markers[markerNum], 'click');
+            };*/
+          });
+          //
+
           searchButton = document.getElementById("searchButton").onclick = searchLocations;
 
-          locationSelect = document.getElementById("locationSelect");
+          /*locationSelect = document.getElementById("locationSelect");
           locationSelect.onchange = function() {
             var markerNum = locationSelect.options[locationSelect.selectedIndex].value;
-            if (markerNum != "none"){
-              google.maps.event.trigger(markers[markerNum], 'click');
-            }
-          };
+          };*/
         }
 
        function searchLocations() {
@@ -107,7 +131,7 @@
                   parseFloat(markerNodes[i].getAttribute("latitude")),
                   parseFloat(markerNodes[i].getAttribute("longitude")));
 
-             createOption(name, distance, i);
+             //createOption(name, distance, i);
              createMarker(latlng, name, address);
              bounds.extend(latlng);
            }
@@ -171,12 +195,17 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjRxIad1m3RzTAn01DyqZKC1CVbQ_nLuw&callback=initMap">
     </script>
-
+    <ul class="form-style-1">
+    <li>
     <form action="add.php">
-      <input type="submit" value="Add a Marker">
-    </form><br>
-    <form action="remove.php">
-      <input type="submit" value="Remove a Marker">
+      <input type="submit" class="button" value="Add a Marker">
     </form>
+    </li>
+    <li>
+    <form action="remove.php">
+      <input type="submit" class="button" value="Remove a Marker">
+    </form>
+  </li>
+</ul>
   </body>
 </html>
