--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Careers of Ole Miss CS Students</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <style>
       #map {
         height: 100%;
@@ -52,7 +53,7 @@
           infoWindow = new google.maps.InfoWindow();
 
           //
-          var searchUrl = 'pointlocator.php?lat=0&lng=0&radius=10000';
+          var searchUrl = 'pointlocator.php?lat=0&lng=0&radius=100000';
           downloadUrl(searchUrl, function(data) {
             var xml = parseXml(data);
             var markerNodes = xml.documentElement.getElementsByTagName("marker");
@@ -60,6 +61,9 @@
             for (var i = 0; i < markerNodes.length; i++) {
               var id = markerNodes[i].getAttribute("id");
               var name = markerNodes[i].getAttribute("name");
+              var company = markerNodes[i].getAttribute("jobname");
+              var website = markerNodes[i].getAttribute("website");
+              var title = markerNodes[i].getAttribute("title");
               var address = markerNodes[i].getAttribute("address");
               var distance = parseFloat(markerNodes[i].getAttribute("distance"));
               var latlng = new google.maps.LatLng(
@@ -67,11 +71,11 @@
                    parseFloat(markerNodes[i].getAttribute("longitude")));
 
               //createOption(name, distance, i);
-              createMarker(latlng, name, address);
+              createMarker(latlng, name, address, company, website, title);
               bounds.extend(latlng);
             }
             //map.fitBounds(bounds);
-            locationSelect.style.visibility = "visible";
+            //locationSelect.style.visibility = "visible";
             /*locationSelect.onchange = function() {
               var markerNum = locationSelect.options[locationSelect.selectedIndex].value;
               google.maps.event.trigger(markers[markerNum], 'click');
@@ -106,11 +110,11 @@
          }
          markers.length = 0;
 
-         locationSelect.innerHTML = "";
+         //locationSelect.innerHTML = "";
          var option = document.createElement("option");
          option.value = "none";
          option.innerHTML = "See all results:";
-         locationSelect.appendChild(option);
+         //locationSelect.appendChild(option);
        }
 
        function searchLocationsNear(center) {
@@ -125,6 +129,9 @@
            for (var i = 0; i < markerNodes.length; i++) {
              var id = markerNodes[i].getAttribute("id");
              var name = markerNodes[i].getAttribute("name");
+             var company = markerNodes[i].getAttribute("jobname");
+             var website = markerNodes[i].getAttribute("website");
+             var title = markerNodes[i].getAttribute("title");
              var address = markerNodes[i].getAttribute("address");
              var distance = parseFloat(markerNodes[i].getAttribute("distance"));
              var latlng = new google.maps.LatLng(
@@ -132,20 +139,20 @@
                   parseFloat(markerNodes[i].getAttribute("longitude")));
 
              //createOption(name, distance, i);
-             createMarker(latlng, name, address);
+             createMarker(latlng, name, address, company, website, title);
              bounds.extend(latlng);
            }
            map.fitBounds(bounds);
-           locationSelect.style.visibility = "visible";
+           /*locationSelect.style.visibility = "visible";
            locationSelect.onchange = function() {
              var markerNum = locationSelect.options[locationSelect.selectedIndex].value;
              google.maps.event.trigger(markers[markerNum], 'click');
-           };
+           };*/
          });
        }
 
-       function createMarker(latlng, name, address) {
-          var html = "<b>" + name + "</b> <br/>" + address;
+       function createMarker(latlng, name, address, company, website, title) {
+          var html = "<b>" + name + "</b>, " + title + "<br/>" + company + "<br>" + address + "<br>" + "<a href='" + website + "';>" + website + "</a>";
           var marker = new google.maps.Marker({
             map: map,
             position: latlng
